--- a/MyFirstHtml.html
+++ b/MyFirstHtml.html
@@ -5,15 +5,16 @@
 <meta charset="UTF-8">
 
 </head>
-
+<center>
 <body>
-<h1>Welcome to my First HTML Page!</h1>
+
+<h1>Welcome to my First HTML Page!</h1><hr/>
 <h2>This is my first HTML Page</h2>
 <h3>My name is Jay Relampagos</h3>
 <h4>I am an aspiring Web Developer</h4>
 
 <p>In four months, I'll be a certified Web Developer</p>
-
-</body>
+</center>
+</body> 
 </html>
 
